Sources/SGCore/UI/ANTLR4CSS3Generated/css3Parser.cpp

// Generated from /home/creastive/projects/sungear/SungearEngine/Externals/antlr4/css/css3Parser.g4 by ANTLR 4.13.1


#include "css3ParserListener.h"
#include "css3ParserVisitor.h"

#include "css3Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct Css3ParserStaticData final {
  Css3ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  Css3ParserStaticData(const Css3ParserStaticData&) = delete;
  Css3ParserStaticData(Css3ParserStaticData&&) = delete;
  Css3ParserStaticData& operator=(const Css3ParserStaticData&) = delete;
  Css3ParserStaticData& operator=(Css3ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag css3parserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
Css3ParserStaticData *css3parserParserStaticData = nullptr;

void css3parserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (css3parserParserStaticData != nullptr) {
    return;
  }
#else
  assert(css3parserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<Css3ParserStaticData>(
    std::vector<std::string>{
      "stylesheet", "charset", "imports", "namespace_", "namespacePrefix", 
      "media", "mediaQueryList", "mediaQuery", "mediaType", "mediaExpression", 
      "mediaFeature", "page", "pseudoPage", "selectorGroup", "selector", 
      "combinator", "simpleSelectorSequence", "typeSelector", "typeNamespacePrefix", 
      "elementName", "universal", "className", "attrib", "pseudo", "functionalPseudo", 
      "expression", "negation", "negationArg", "operator_", "property_", 
      "ruleset", "declarationList", "declaration", "prio", "value", "expr", 
      "term", "function_", "dxImageTransform", "hexcolor", "number", "percentage", 
      "dimension", "unknownDimension", "any_", "atRule", "unused", "block", 
      "nestedStatement", "groupRuleBody", "supportsRule", "supportsCondition", 
      "supportsConditionInParens", "supportsNegation", "supportsConjunction", 
      "supportsDisjunction", "supportsDeclarationCondition", "generalEnclosed", 
      "url", "var_", "calc", "calcOperand", "calcSign", "calcExpr", "calcNestedValue", 
      "calcValue", "fontFaceRule", "fontFaceDeclaration", "keyframesRule", 
      "keyframeBlock", "keyframeSelector", "viewport", "counterStyle", "fontFeatureValuesRule", 
      "fontFamilyNameList", "fontFamilyName", "featureValueBlock", "featureType", 
      "featureValueDefinition", "ident", "ws", "color", "color_alpha", "color_component"
    },
    std::vector<std::string>{
      "", "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "'='", "':'", 
      "'.'", "'*'", "'/'", "'|'", "'_'", "", "", "", "'<!--'", "'-->'", 
      "'~='", "'|='", "", "", "", "", "", "'@charset '", "", "", "'url('", 
      "", "", "", "", "", "", "'+'", "'-'", "'>'", "','", "'~'", "", "", 
      "", "'^='", "'$='", "'*='", "", "", "", "", "", "", "'calc('", "'rgb('", 
      "'rgba('", "", "", "", "", "", "", "'var('"
    },
    std::vector<std::string>{
      "", "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", 
      "CloseBrace", "SemiColon", "Equal", "Colon", "Dot", "Multiply", "Divide", 
      "Pipe", "Underscore", "Comment", "Url", "Space", "Cdo", "Cdc", "Includes", 
      "DashMatch", "Hash", "Import", "Page", "Media", "Namespace", "Charset", 
      "Important", "Percentage", "Url_", "UnicodeRange", "MediaOnly", "Not", 
      "And", "Dimension", "UnknownDimension", "Plus", "Minus", "Greater", 
      "Comma", "Tilde", "PseudoNot", "Number", "String_", "PrefixMatch", 
      "SuffixMatch", "SubstringMatch", "FontFace", "Supports", "Or", "Keyframes", 
      "From", "To", "Calc", "Rgb", "Rgba", "Viewport", "CounterStyle", "FontFeatureValues", 
      "DxImageTransform", "AtKeyword", "Variable", "Var", "Ident", "Function_", 
      "UnexpectedCharacter"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  css3parserParserStaticData = staticData.release();
}

}

css3Parser::css3Parser(TokenStream *input) : css3Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

css3Parser::css3Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  css3Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *css3parserParserStaticData->atn, css3parserParserStaticData->decisionToDFA, css3parserParserStaticData->sharedContextCache, options);
}

css3Parser::~css3Parser() {
  delete _interpreter;
}

const atn::ATN& css3Parser::getATN() const {
  return *css3parserParserStaticData->atn;
}

std::string css3Parser::getGrammarFileName() const {
  return "css3Parser.g4";
}

const std::vector<std::string>& css3Parser::getRuleNames() const {
  return css3parserParserStaticData->ruleNames;
}

const dfa::Vocabulary& css3Parser::getVocabulary() const {
  return css3parserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView css3Parser::getSerializedATN() const {
  return css3parserParserStaticData->serializedATN;
}


//----------------- StylesheetContext ------------------------------------------------------------------

css3Parser::StylesheetContext::StylesheetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

css3Parser::WsContext* css3Parser::StylesheetContext::ws() {
  return getRuleContext<css3Parser::WsContext>(0);
}

tree::TerminalNode* css3Parser::StylesheetContext::EOF() {
  return getToken(css3Parser::EOF, 0);
}

std::vector<css3Parser::CharsetContext *> css3Parser::StylesheetContext::charset() {
  return getRuleContexts<css3Parser::CharsetContext>();
}

css3Parser::CharsetContext* css3Parser::StylesheetContext::charset(size_t i) {
  return getRuleContext<css3Parser::CharsetContext>(i);
}

std::vector<css3Parser::ImportsContext *> css3Parser::StylesheetContext::imports() {
  return getRuleContexts<css3Parser::ImportsContext>();
}

css3Parser::ImportsContext* css3Parser::StylesheetContext::imports(size_t i) {
  return getRuleContext<css3Parser::ImportsContext>(i);
}

std::vector<css3Parser::Namespace_Context *> css3Parser::StylesheetContext::namespace_() {
  return getRuleContexts<css3Parser::Namespace_Context>();
}

css3Parser::Namespace_Context* css3Parser::StylesheetContext::namespace_(size_t i) {
  return getRuleContext<css3Parser::Namespace_Context>(i);
}

std::vector<css3Parser::NestedStatementContext *> css3Parser::StylesheetContext::nestedStatement() {
  return getRuleContexts<css3Parser::NestedStatementContext>();
}

css3Parser::NestedStatementContext* css3Parser::StylesheetContext::nestedStatement(size_t i) {
  return getRuleContext<css3Parser::NestedStatementContext>(i);
}

std::vector<tree::TerminalNode *> css3Parser::StylesheetContext::Comment() {
  return getTokens(css3Parser::Comment);
}

tree::TerminalNode* css3Parser::StylesheetContext::Comment(size_t i) {
  return getToken(css3Parser::Comment, i);
}

std::vector<tree::TerminalNode *> css3Parser::StylesheetContext::Space() {
  return getTokens(css3Parser::Space);
}

tree::TerminalNode* css3Parser::StylesheetContext::Space(size_t i) {
  return getToken(css3Parser::Space, i);
}

std::vector<tree::TerminalNode *> css3Parser::StylesheetContext::Cdo() {
  return getTokens(css3Parser::Cdo);
}

tree::TerminalNode* css3Parser::StylesheetContext::Cdo(size_t i) {
  return getToken(css3Parser::Cdo, i);
}

std::vector<tree::TerminalNode *> css3Parser::StylesheetContext::Cdc() {
  return getTokens(css3Parser::Cdc);
}

tree::TerminalNode* css3Parser::StylesheetContext::Cdc(size_t i) {
  return getToken(css3Parser::Cdc, i);
}


size_t css3Parser::StylesheetContext::getRuleIndex() const {
  return css3Parser::RuleStylesheet;
}

void css3Parser::StylesheetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<css3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStylesheet(this);
}

void css3Parser::StylesheetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<css3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStylesheet(this);
}


std::any css3Parser::StylesheetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<css3ParserVisitor*>(visitor))
    return parserVisitor->visitStylesheet(this);
  else
    return visitor->visitChildren(this);
}

css3Parser::StylesheetContext* css3Parser::stylesheet() {
  StylesheetContext *_localctx = _tracker.createInstance<StylesheetContext>(_ctx, getState());
  enterRule(_localctx, 0, css3Parser::RuleStylesheet);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(168);
    ws();
    setState(178);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == css3Parser::Charset) {
      setState(169);
      charset();
      setState(173);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 950272) != 0)) {
        setState(170);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 950272) != 0))) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(175);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(180);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(190);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == css3Parser::Import) {
      setState(181);
      imports();
      setState(185);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 950272) != 0)) {
        setState(182);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 950272) != 0))) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(187);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(192);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(202);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == css3Parser::Namespace) {
      setState(193);
      namespace_();
      setState(197);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 950272) != 0)) {
        setState(194);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 950272) != 0))) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(199);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(204);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(214);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 3332413584879726122) != 0) || _la == css3Parser::Ident

    || _la == css3Parser::Function_) {
      setState(205);
      nestedStatement();
      setState(209);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 950272) != 0)) {
        setState(206);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 950272) != 0))) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(211);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(216);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(217);
    match(css3Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CharsetContext ------------------------------------------------------------------

css3Parser::CharsetContext::CharsetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t css3Parser::CharsetContext::getRuleIndex() const {
  return css3Parser::RuleCharset;
}

void css3Parser::CharsetContext::copyFrom(CharsetContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BadCharsetContext ------------------------------------------------------------------

tree::TerminalNode* css3Parser::BadCharsetContext::Charset() {
  return getToken(css3Parser::Charset, 0);
}

std::vector<css3Parser::WsContext *> css3Parser::BadCharsetContext::ws() {
  return getRuleContexts<css3Parser::WsContext>();
}

css3Parser::WsContext* css3Parser::BadCharsetContext::ws(size_t i) {
  return getRuleContext<css3Parser::WsContext>(i);
}

tree::TerminalNode* css3Parser::BadCharsetContext::String_() {
  return getToken(css3Parser::String_, 0);
}

css3Parser::BadCharsetContext::BadCharsetContext(CharsetContext *ctx) { copyFrom(ctx); }

void css3Parser::BadCharsetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<css3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBadCharset(this);
}
void css3Parser::BadCharsetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<css3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBadCharset(this);
}

std::any css3Parser::BadCharsetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<css3ParserVisitor*>(visitor))
    return parserVisitor->visitBadCharset(this);
  else
    return visitor->visitChildren(this);
}
//----------------- GoodCharsetContext ------------------------------------------------------------------

tree::TerminalNode* css3Parser::GoodCharsetContext::Charset() {
  return getToken(css3Parser::Charset, 0);
}

std::vector<css3Parser::WsContext *> css3Parser::GoodCharsetContext::ws() {
  return getRuleContexts<css3Parser::WsContext>();
}

css3Parser::WsContext* css3Parser::GoodCharsetContext::ws(size_t i) {
  return getRuleContext<css3Parser::WsContext>(i);
}

tree::TerminalNode* css3Parser::GoodCharsetContext::String_() {
  return getToken(css3Parser::String_, 0);
}

tree::TerminalNode* css3Parser::GoodCharsetContext::SemiColon() {
  return getToken(css3Parser::SemiColon, 0);
}

css3Parser::GoodCharsetContext::GoodCharsetContext(CharsetContext *ctx) { copyFrom(ctx); }

void css3Parser::GoodCharsetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<css3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGoodCharset(this);
}
void css3Parser::GoodCharsetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<css3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGoodCharset(this);
}

std::any css3Parser::GoodCharsetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<css3ParserVisitor*>(visitor))
    return parserVisitor->visitGoodCharset(this);
  else
    return visitor->visitChildren(this);
}
css3Parser::CharsetContext* css3Parser::charset() {
  CharsetContext *_localctx = _tracker.createInstance<CharsetContext>(_ctx, getState());
  enterRule(_localctx, 2, css3Parser::RuleCharset);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(231);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<css3Parser::GoodCharsetContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(219);
      match(css3Parser::Charset);
      setState(220);
      ws();
      setState(221);
      match(css3Parser::String_);
      setState(222);
      ws();
      setState(223);
      match(css3Parser::SemiColon);
      setState(224);
      ws();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<css3Parser::BadCharsetContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(226);
      match(css3Parser::Charset);
      setState(227);
      ws();
      setState(228);
      match(css3Parser::String_);
      setState(229);
      ws();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportsContext ------------------------------------------------------------------

css3Parser::ImportsContext::ImportsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t css3Parser::ImportsContext::getRuleIndex() const {
  return css3Parser::RuleImports;
}

void css3Parser::ImportsContext::copyFrom(ImportsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BadImportContext ------------------------------------------------------------------

tree::TerminalNode* css3Parser::BadImportContext::Import() {
  return getToken(css3Parser::Import, 0);
}

std::vector<css3Parser::WsContext *> css3Parser::BadImportContext::ws() {
  return getRuleContexts<css3Parser::WsContext>();
}

css3Parser::WsContext* css3Parser::BadImportContext::ws(size_t i) {
  return getRuleContext<css3Parser::WsContext>(i);
}

css3Parser::MediaQueryListContext* css3Parser::BadImportContext::mediaQueryList() {
  return getRuleContext<css3Parser::MediaQueryListContext>(0);
}

tree::TerminalNode* css3Parser::BadImportContext::String_() {
  return getToken(css3Parser::String_, 0);
}

css3Parser::UrlContext* css3Parser::BadImportContext::url() {
  return getRuleContext<css3Parser::UrlContext>(0);
}

css3Parser::BadImportContext::BadImportContext(ImportsContext *ctx) { copyFrom(ctx); }

void css3Parser::BadImportContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<css3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBadImport(this);
}
void css3Parser::BadImportContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<css3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBadImport(this);
}

std::any css3Parser::BadImportContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<css3ParserVisitor*>(visitor))
    return parserVisitor->visitBadImport(this);
  else
    return visitor->visitChildren(this);
}
//----------------- GoodImportContext ------------------------------------------------------------------

tree::TerminalNode* css3Parser::GoodImportContext::Import() {
  return getToken(css3Parser::Import, 0);
}

std::vector<css3Parser::WsContext *> css3Parser::GoodImportContext::ws() {
  return getRuleContexts<css3Parser::WsContext>();
}

css3Parser::WsContext* css3Parser::GoodImportContext::ws(size_t i) {
  return getRuleContext<css3Parser::WsContext>(i);
}

css3Parser::MediaQueryListContext* css3Parser::GoodImportContext::mediaQueryList() {
  return getRuleContext<css3Parser::MediaQueryListContext>(0);
}

tree::TerminalNode* css3Parser::GoodImportContext::SemiColon() {
  return getToken(css3Parser::SemiColon, 0);
}

tree::TerminalNode* css3Parser::GoodImportContext::String_() {
  return getToken(css3Parser::String_, 0);
}

css3Parser::UrlContext* css3Parser::GoodImportContext::url() {
  return getRuleContext<css3Parser::UrlContext>(0);
}

css3Parser::GoodImportContext::GoodImportContext(ImportsContext *ctx) { copyFrom(ctx); }

void css3Parser::GoodImportContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<css3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGoodImport(this);
}
void css3Parser::GoodImportContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<css3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGoodImport(this);
}

std::any css3Parser::GoodImportContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<css3ParserVisitor*>(visitor))
    return parserVisitor->visitGoodImport(this);
  else
    return visitor->visitChildren(this);
}
css3Parser::ImportsContext* css3Parser::imports() {
  ImportsContext *_localctx = _tracker.createInstance<ImportsContext>(_ctx, getState());
  enterRule(_localctx, 4, css3Parser::RuleImports);
